# local-llm-forge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: default.yaml
docs/: architecture.md  auto-pipeline-design.md  implementation-phases.md  optimization-strategy.md
research/01-flash-moe-analysis/: full-analysis.md
research/02-gap-analysis/: optimization-gaps.md
research/03-technique-verification/: m4pro-feasibility.md
research/04-deep-research/: ane-hybrid.md  auto-pipeline.md  quantization-comparison.md
research/05-feasibility-report/: final-report.md
research/06-advanced-optimization/: paper-survey.md
src/forge/: __init__.py  cli.py
src/forge/analysis/: __init__.py  cache_simulator.py  expert_profiler.py  latency_profiler.py  sensitivity.py
src/forge/analyzer/: hardware_profiler.py  memory_calculator.py  model_inspector.py
src/forge/engine/: ane_hybrid.py  attention_backend.py  bitnet_engine.py  eagle.py  expert_cache.py  kv_cache.py  long_context.py  mamba_engine.py  mla_attention.py  mlx_engine.py  prefix_cache.py  prompt_cache.py  redrafter.py  scheduler.py  speculative.py  star_attention.py  structured_decoding.py
src/forge/metal/: __init__.py  kernels.metal
src/forge/optimizer/: expert_merger.py  expert_pruner.py  mixed_precision.py  profiler.py  (+3 more)
src/tests/: conftest.py  test_adaptive_k.py  test_cache_simulator.py  test_draft_models.py  test_kv_estimation.py  test_memory_calculator.py  test_ngram.py  test_ngram_spec.py  test_pearl.py  test_prefix_cache.py  test_router.py  test_scheduler.py  test_strategy_selector.py
(+26 files in other folders)
